--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                         <div class="valign-table">
                             <div class="valign-cell">
                                 <h2 class="text-upper">简历模板</h2>
-                                <p>个人简历模板，托管在码云。记得给个赞哦！</p>
+                                <p>个人简历模板，托管在github上。记得给个赞哦！</p>
                                 <a href="https://p1066.github.io/" class="pf-btn-view btn btn-primary" target="_blank">详情</a>
                             </div>
                         </div>
